gateway/pa-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pa-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pa
spec:
  hosts:
  - "*"
  gateways:
  - pa-gateway
  http:
  - match:
    - uri:
        exact: /crg
    route:
    - destination:
        host: crd-request-generator-service
        port:
          number: 3000
  - match:
    - uri:
        exact: /productpage
    route:
    - destination:
        host: productpage
        port:
          number: 9080
